--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -112,5 +114,7 @@
       }
     }
   },
-  "defaultProject": "Apolices-Front"
+  "cli": {
+    "analytics": "af6c5368-db9d-49b5-8f7f-8a00e73a7ed6"
+  }
 }
